css/site.styl
@import "sanitize"
@import "helpers"
@import "fonts"

// VARIABLES

$golden-ratio = 1.61803398875

$font-size-basic = 18px
$font-leading-basic = 1.4
$font-tracking-basic = 0.003em

$color-black-soft = rgb(14, 14, 14)
$color-white-soft = rgb(253, 253, 253)
$color-black = #231f20
$color-light-black = #2b2b2b
$color-white = #ffffff
$color-blue = #75cede
$color-light-blue = #91d8e5

// TYPOGRAPHY

body
  font-family: 'Roboto', helvetica, arial, sans-serif
  font-size: $font-size-basic
  line-height: $font-leading-basic
  letter-spacing: $font-tracking-basic
  display: flex
  flex-direction: column
  text-rendering: optimizeLegibility
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

h1
  font-size: 3em

h2
  font-size: 2.7em
  font-weight: normal

h3
  font-size: 1.5em

p
  font-size: 0.98em
  margin-bottom: 1.5em
  line-height: 1.6

hr
  border-top: 2px solid $color-black


// LINKS

a, a:active, a:visited
  color:inherit
  transition: color 100ms
  &:hover
    color: #fff


// BASIC

html
  background-color: $color-blue
  color: $color-black

img
  max-width: 100%
  height: auto

body
  border-right: 2px solid $color-black
  border-left: 2px solid $color-black
  border: 20px solid $color-blue
  border: 20px solid $color-blue
  position: fixed
  overflow: scroll
  position: fixed
  height: 100vh
  width: 100vw
  overflow: scroll

.container
  max-width: 980px
  margin: 0 auto

.content
  max-width: 800px
  margin: 0 auto
  
// BODY STYLES

.quicksand
  font-family: 'Quicksand', sans-serif

.button-3d
  display: inline-block
  line-height: 1em
  font-weight: bold
  margin: 60px auto
  border: 2px solid $color-black
  padding: 18px
  text-transform: uppercase
  font-size: 1.2em
  position: relative
  background-color: #75cede
  transition: background-color 100ms

  &:before
    content: ''
    width: 100%
    height: 100%
    position: absolute
    border: 2px solid $color-black
    top: 3px
    left: -7px
    z-index: -1
    bottom: 0
    box-sizing: content-box

.button-3d:hover
  background: $color-light-blue

//the 100% widths are just so stylus can compile delete as desired

#main-container
  border-left: 2px solid $color-black
  border-right: 2px solid $color-black
  flex: 1 1 auto


// HEADER

#header,
#footer
  position: fixed
  z-index: 100
  left: 0
  right: 0
  height: 50px
  margin: 0 20px
  border: 2px solid $color-black
  display: flex
  flex-direction: row
  justify-content: space-between
  align-items: center
  background: $color-blue

  .left
    display: flex;
    flex-direction: row;
    align-items: center;

  nav
    padding: 0 20px

#header
  top: 20px

  li
    display: inline-block

  .right a
    font-size: 0.8em;
    line-height: 50px;
    font-weight: bold;

  .right li

    &:before
      line-height: 50px
      content: counter(seccion, disc)
      margin: 0 6px 0 0
      display: inline-block

    &:first-child:before
      content: ''

.logo
  font-size: 2em
  line-height: 50px

  span
    border-right: 2px solid $color-black
    display: inline-block
    width: 50px
    text-align: center

.title
  padding: 0 20px

// FOOTER
#footer
  bottom: 20px
  margin-top: 0
  font-size: 0.7em
  font-weight: bold

  .right
    border-left: 2px solid
    line-height: 50px


.legalix:before
  content: '>'
  margin-right: 7px

// POSTS LOOP
.posts
  width: 100%

  h1
    text-transform: uppercase
    font-size: 2.4em
    font-family: 'Quicksand', sans-serif
    margin-bottom: 0.25em

  header
    border-bottom: 2px solid $color-black
    margin-bottom: 2.3em

.post
  width: 100%

.date,
.post-info
  font-size: 0.9em
  font-weight: bold
  font-family: 'Quicksand', sans-serif
  margin-bottom: 0.7em

#pagination
  width: 100%

.numbered-pagination
  font-weight: bold
  margin: 20px auto 40px

.page-numbers
  margin: 0 4px
  font-size: 1.3em

// MAIN-CONTENT
#main-content
  padding: 50px 0

  section:last-child
    border-bottom: none

// SIMPLE CONTAINER

.simple-container
  padding: 70px 0

.simple-container h2
  margin-bottom: 30px

// ABOUT

.about-container p
  font-weight: bold

.areas-container,
.posts-container
  h2
    padding: 40px
    border-bottom: 2px solid $color-black

.areas
  display: flex
  flex-direction: row
  flex-wrap: wrap

.area
  flex: 0 1 50%
  border-bottom: 2px solid $color-black

.area:nth-child(odd)
  border-right: 2px solid $color-black

.area:nth-child(even)
  .area-content
    float: right

.area-content
  padding: 50px 30px
  max-width: 460px

.area-content h3
  margin: 50px 0 30px

// POSTS
.grid-container
  margin: 40px auto
  display: flex
  flex-flow: row
  justify-content: space-between
  flex-wrap: wrap
  border-bottom: 2px solid $color-black

.grid-container .post
  flex: 0 1 296px
  min-height: 390px
  margin-bottom: 0.7em
  height: 430px

  .post-thumbnail
    border: 2px solid $color-white

  h3
    font-size: 1.3em
    margin: 1.1em 0 0.7em

  p
    font-size: 0.9em

  & a:hover
    h3
      text-decoration: underline

// SINGLE
.single
  .container
    max-width: 800px

  .post-content
    margin-bottom: 1.2em
    color: $color-light-black

    a
      color: $color-white
      text-decoration: underline
      font-weight: bold
      font-style: italic

    blockquote:before,
    blockquote:after
      content: '';
      width: 60%;
      border: 1px solid black;
      display: block;

    blockquote:after
      width: 20%

    img
      max-width: 710px

.single .posts,
.page .posts
  padding: 6.6em 0

.single-featured
  margin-bottom: 2.3em

.taxonomy-link
  text-transform: uppercase

  &:before
    display: inline-block
    margin: 0 6px 0 0
    content: counter(seccion, disc)

.tags
  margin-bottom: 1.2em

  .taxonomy-link:before
    display: none

  .taxonomy-link:after
    content: ','

  .taxonomy-link:last-child:after
    display: none


// SHARE BAR
.share-bar
  display: flex
  position: relative
  text-transform: uppercase
  font-weight: bold
  font-size: 0.8em
  vertical-align: middle
  align-items: center
  max-width: 385px
  text-align: center
  margin-bottom: 2.3em
  color: $color-light-black

  &:after
    max-width: 335px
    width: 100%
    height: 100%
    position: absolute
    top: 0
    bottom: 0
    left: 0
    content: ''
    border: 2px solid $color-black
    z-index: -1

  a, span
    flex: 1 1 33%
    padding: 15px

.share-button
  transform: translate3d(0,5px,0)
  background: $color-blue
  border: 2px solid $color-black

.share-button:hover
  background-color: $color-light-blue


.share-button:last-of-type
  transform: translate3d(-2px,5px,0)
// PAGE
// Page: ABOUT
.page .about-container
  h2
    display: none
  .logo
    margin-bottom: 60px

// MEDIA QUERIES

//@media screen and (max-width: ($col * $cols)+($gutter * $cols))
  html
    width: 100%

@import "wordpress"

